multiple task added

--- a/public/front_end/css/style.css
+++ b/public/front_end/css/style.css
@@ -5881,6 +5881,7 @@ textarea:-ms-input-placeholder {
 
 .ax-section-gap {
   padding: 130px 0;
+  margin-top:-24px;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
